@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-01T16:15:54Z",
-  "count_outdated" : 852,
-  "uniques_outdated" : 502,
-  "count" : 891,
-  "uniques" : 524,
+  "timestamp" : "2023-10-02T01:01:13Z",
+  "count_outdated" : 854,
+  "uniques_outdated" : 504,
+  "count" : 893,
+  "uniques" : 525,
   "clones" : [
-    {
-      "timestamp": "2023-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-09-18T00:00:00Z",
       "count": 2,
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2023-10-01T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
